--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
+
 <html>
   <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=11" />
+    <meta http-equiv="Cache-Control" content="no-cache" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'unsefe-inline'; style-src 'unsefe-inline';"
+    />
     <title>YouTube Timestamps</title>
     <style>
       body {
@@ -10,11 +18,23 @@
       button {
         margin: 10px 0;
       }
+      .options {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
     </style>
   </head>
   <body>
     <h3>Options</h3>
     <button id="createTimestamps">Create Timestamps</button>
+    <div class="options">
+      <label for="toggleExtension">Turn Extension:</label>
+      <input type="radio" id="on" name="toggleExtension" value="on" checked />
+      <label for="on">On</label>
+      <input type="radio" id="off" name="toggleExtension" value="off" />
+      <label for="off">Off</label>
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
